--- a/package.json
+++ b/package.json
@@ -26,5 +26,22 @@
   "bugs": {
     "url": "https://github.com/nitram509/macaroons.js/issues"
   },
-  "homepage": "https://github.com/nitram509/macaroons.js"
+  "homepage": "https://github.com/nitram509/macaroons.js",
+  "engines": {
+    "node": "0.10.x",
+    "npm": "1.4.x"
+  },
+  "dependencies": {
+    "closurecompiler": "^1.5.1",
+    "grunt": "~0.4.2",
+    "grunt-cli": "~0.1.13",
+    "grunt-closurecompiler": "~0.9.9",
+    "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-cssmin": "^0.9.0",
+    "grunt-contrib-requirejs": "~0.4.3",
+    "grunt-contrib-watch": "^0.4.4",
+    "grunt-typescript": "^0.4.4",
+    "typescript": "^1.3.0"
+  }
 }
