--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "macaroons.js",
-  "version": "0.8.0",
+  "version": "0.0.1-alpha",
   "description": "Javascript implementation of Macaroons: Cookies with Contextual Caveats for Decentralized Authorization in the Cloud.",
   "main": "index.js",
   "scripts": {
