--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "macaroons.js",
-  "version": "0.0.1-alpha",
+  "version": "0.0.2-alpha",
   "description": "Javascript implementation of Macaroons: Cookies with Contextual Caveats for Decentralized Authorization in the Cloud.",
+  "readmeFilename": "README.md",
   "main": "index.js",
   "scripts": {
-    "test": "node ./node_modules/grunt-cli/bin/grunt default test"
+    "test": "node ./node_modules/grunt-cli/bin/grunt test"
   },
   "repository": {
     "type": "git",
@@ -21,7 +22,10 @@
     "authorization",
     "macaroons"
   ],
-  "author": "Martin W. Kirst",
+  "author": {
+    "name": "Martin W. Kirst",
+    "url": "https://twitter.com/nitram509"
+  },
   "license": "Apache 2.0",
   "bugs": {
     "url": "https://github.com/nitram509/macaroons.js/issues"
@@ -45,5 +49,8 @@
     "grunt-typescript": "^0.4.6",
     "mocha": "~2.0.1",
     "typescript": "^1.3.0"
+  },
+  "directories": {
+    "lib": "./lib"
   }
 }
