--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "typescript": "^1.3.0"
   },
   "directories": {
-    "lib": "./lib"
+    "lib": "./lib",
+    "example": "./src/examples"
   }
 }
