--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "macaroons.js",
-  "version": "0.0.3-alpha",
+  "version": "0.0.4-alpha",
   "description": "Javascript implementation of Macaroons: Cookies with Contextual Caveats for Decentralized Authorization in the Cloud.",
   "readmeFilename": "README.md",
   "main": "index.js",
@@ -53,5 +53,6 @@
   "directories": {
     "lib": "./lib",
     "example": "./src/examples"
-  }
+  },
+  "main": "index.js"
 }
