--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "macaroons.js",
-  "version": "0.0.6-alpha",
+  "version": "0.1.0",
   "description": "Javascript implementation of Macaroons: Cookies with Contextual Caveats for Decentralized Authorization in the Cloud.",
   "readmeFilename": "README.md",
   "main": "index.js",
