--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "macaroons.js",
-  "version": "0.3.2",
+  "version": "0.3.3",
   "description": "Javascript implementation of Macaroons: Cookies with Contextual Caveats for Decentralized Authorization in the Cloud.",
   "readmeFilename": "README.md",
   "main": "index.js",
@@ -50,7 +50,7 @@
     "grunt-mocha-test": "^0.12.4",
     "grunt-typescript": "^0.4.6",
     "mocha": "~2.0.1",
-    "typescript": "^1.3.0"
+    "typescript": "1.3.0"
   },
   "directories": {
     "lib": "./lib"
