--- a/package.json
+++ b/package.json
@@ -47,10 +47,10 @@
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-mocha-test": "^0.12.4",
-    "grunt-typescript": "^0.4.6",
-    "mocha": "~2.0.1",
-    "typescript": "1.3.0"
+    "grunt-mocha-test": "^0.12.7",
+    "grunt-typescript": "^0.6.1",
+    "mocha": "~2.1.0",
+    "typescript": "^1.4.1"
   },
   "directories": {
     "lib": "./lib"
