--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
   },
   "homepage": "https://github.com/nitram509/macaroons.js",
   "engines": {
-    "node": "0.11.x",
-    "npm": "1.4.x"
+    "node": ">=0.11",
+    "npm": ">=1.4"
   },
   "dependencies": {
     "ecma-nacl": "^2.0.1",
