--- a/package.json
+++ b/package.json
@@ -47,9 +47,9 @@
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-mocha-test": "^0.12.7",
+    "grunt-mocha-test": "^0.13.2",
     "grunt-typescript": "^0.6.1",
-    "mocha": "~2.2.4",
+    "mocha": "^3.2.0",
     "typescript": "^1.4.1"
   },
   "directories": {
