--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "macaroons.js",
-  "version": "0.3.8",
+  "version": "0.3.9",
   "description": "Javascript implementation of Macaroons: Cookies with Contextual Caveats for Decentralized Authorization in the Cloud.",
   "readmeFilename": "README.md",
   "main": "index.js",
@@ -41,14 +41,17 @@
     "typedarray-to-buffer": "^3.0.1"
   },
   "devDependencies": {
+    "@types/node": "^14.14.9",
+    "@types/expect.js": "^0.3.29",
+    "@types/mocha": "^8.0.4",
     "expect.js": "~0.3.1",
-    "grunt": "~0.4.5",
+    "grunt": "~1.3.0",
     "grunt-cli": "~1.3.2",
     "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-mocha-test": "^0.13.2",
-    "grunt-typescript": "^0.8.0",
+    "grunt-ts": "^6.0.0-beta.22",
     "mocha": "^8.2.1",
     "typescript": "^4.1.2"
   },
