--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "readmeFilename": "README.md",
   "main": "index.js",
   "scripts": {
-    "test": "node ./node_modules/grunt-cli/bin/grunt test",
-    "before_deploy": "node ./node_modules/grunt-cli/bin/grunt clean default"
+    "build": "npx grunt",
+    "test": "npx grunt test",
+    "before_deploy": "npx grunt clean default"
   },
   "repository": {
     "type": "git",
@@ -42,18 +43,17 @@
   },
   "devDependencies": {
     "@types/node": "^14.14.9",
-    "@types/expect.js": "^0.3.29",
-    "@types/mocha": "^8.0.4",
-    "expect.js": "~0.3.1",
+    "@types/jest": "^26.0.15",
+    "jest": "^26.6.3",
     "grunt": "~1.3.0",
     "grunt-cli": "~1.3.2",
     "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-watch": "^1.1.0",
-    "grunt-mocha-test": "^0.13.2",
+    "grunt-run": "^0.8.1",
     "grunt-ts": "^6.0.0-beta.22",
-    "mocha": "^8.2.1",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "ts-node": "^9.0.0"
   },
   "directories": {
     "lib": "./lib"
