--- a/.github/workflows/update-code-coverage.yaml
+++ b/.github/workflows/update-code-coverage.yaml
@@ -22,6 +22,6 @@ jobs:
         run: |
           git config --global user.name 'github-action-update-code-coverage'
           git config --global user.email 'nitram509@users.noreply.github.com'
-          git add ./coverage
+          git add -f ./coverage
           git commit -m "update code coverage report"
           git push
